--- a/practice.css
+++ b/practice.css
@@ -9,6 +9,26 @@ body{
     background-size: cover;
     background-color: #d9d9d9;
 }
+.dropdown li {
+    list-style: none;
+    display: none;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    margin-left: 20px;
+    font-size: 25px;
+
+}
+.dropnav {
+    position: relative; 
+}
+
+.dropnav:hover>.dropdown li  {
+    display: block;
+}
+
 .pages ul{
     display: flex;
     flex-direction: row;
@@ -20,7 +40,7 @@ body{
     text-decoration: none;
     font-size: medium;
     color:#353535;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-family: Arial;
     font-weight: bold;
     transition: 0.4s ease-in-out;
@@ -39,8 +59,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
-    height: 80px;
+    padding: 20px;
+    height: 70px;
 
 
     
@@ -50,7 +70,7 @@ body{
     margin-top: 30px;
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 5px;
     margin-right: 100px; 
     margin-left: 80px;  
     margin-bottom: 0px;
@@ -62,8 +82,8 @@ body{
     color:#ca6702;
 }
 .searchButton{
-    height: 40px;
-    width: 100px;
+    height: 35px;
+    width: 90px;
     background-color:#ca6702;
     border: 1px solid #3c6e71;
     cursor: pointer;
@@ -81,8 +101,8 @@ body{
     background: transparent;
     border: 1px solid #ca6702;
     color: #353535;
-    width: 400px;
-    height: 10;
+    width: 300px;
+    height: 35px;
 }
 /* *{
     border: 1px solid black;
@@ -99,7 +119,7 @@ main{
     width: 89%;
     flex-wrap: wrap;
     gap: 50px;
-    margin-top: 50px;
+    margin-top: 0px;
     margin-left: 10px;
     margin-right: 10px;
 
@@ -108,6 +128,7 @@ main{
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 /*Product Grid*/
@@ -120,8 +141,8 @@ main{
 }
 .product{
    
-    max-height: 700px;
-    min-width: 400px;
+    height: 450px;
+    width: 260px;
     margin-left: 20px;
    /* background-color: rgba(225,225,225,0.05);
     /*backdrop-filter: blur(30px);*/
@@ -140,7 +161,7 @@ main{
     transform: scale(1.05);
 }
 .productImage{
-    height: 60%;
+    height: 50%;
     margin: 20px;
     overflow: hidden;
     
@@ -151,11 +172,11 @@ main{
 .productImage::before{
     content: 'HOT';
     position: absolute;
-    width: 65px;
-    height: 27px;
+    width: 50px;
+    height: 23px;
     background-color: #ff2e04e5 ;
     color: #ffffff;
-    font-weight: 600;
+    font-weight: 400;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -165,30 +186,37 @@ main{
 }
 .desc{
     height: 13%;
-    width: 380px;
+    width: 240px;
     padding: 10px;
     color: #353535;
 }
 .desc p{
     font-weight: bold;
-    font-size: large;
+    font-size: small;
+    display: flex;
+    flex-wrap: wrap;
 }
 .price{
     height: 5%;
-    margin-top: 5px;
-    padding: 10px;
+    margin-top: 25px;
     /*color: rgb(240, 78, 9);*/
     color: #005F73;
+}
+.price h2{
+    font-size: 1rem;
+    margin-left: 15px;
 }
 .productBtn{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-bottom: 30px;
+    /* padding-bottom: 20px; */
     height: 10%;
-    gap: 60px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    gap: 20px;
+    
     
 }
 .productBtn .btn1 ,.productBtn .btn2{
@@ -196,11 +224,13 @@ main{
     width: 100px;
 
 }
-.btn1 button,.btn2 button{
-    height: 100%;
-    width: 100%;
+.btn1 button,.btn2 button{ 
+    padding: 8px;
     /* border-radius: 20px; */
     background-color: #accdc2;
+}
+.btn1 h3, .btn2 h3{
+    font-size: small;
 }
 .productImage img{
     height:100%;
@@ -229,16 +259,16 @@ main{
 }
 .box{
     margin-top: 20px;
-    padding: 20px;
+    padding: 17px;
 }
 
 .box p {
-    font-size: 20px;
+    font-size: 1.3rem;
     letter-spacing: 1px;
 }
 
 .box h3 {
-    font-size: 30px;
+    font-size: 1.7rem;
     font-family: 'Times New Roman', Times, serif;
 
 }
@@ -267,7 +297,7 @@ main{
 }
 
 .socialmedia a {
-    font-size: 20px;
+    font-size: 1.3rem;
 }
 
 .socialmedia a:hover {
@@ -297,7 +327,7 @@ main{
     border-radius: 10px;
     cursor: pointer;
     transition: 0.4s ease-in-out;
-    font-size: 15px;
+    font-size: 1.2rem;
 }
 
 .subscribe:hover {
@@ -322,9 +352,9 @@ main{
     color: #353535;
     margin-left: 10px;
     text-decoration: none;
-    padding:10px;
+    padding:5px;
     display:inline-block;
-    width: 30px;
+    width: 25px;
     font-size: larger;
     
 }
