--- a/practice.css
+++ b/practice.css
@@ -1,369 +1,466 @@
-*{
-    margin: 0px;
-    /*border: 1px solid red;*/
+/*removing any margin from page*/
+* {
+  margin: 0px;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    /*background-image: url(./assets/images/bg.jpg);
-    /*background-color: rgb(82, 73, 73);*/
-    /*background-color: rgb(69, 48, 48);*/
-    background-size: cover;
-    background-color: #d9d9d9;
+/*this is styling body section*/
+body {
+  background-size: cover;
+  background-color: #d9d9d9;
+}
+/*this is styling of dropdown nav of categories*/
+.dropdown {
+  display: flex;
+  flex-direction: column !important;
 }
 .dropdown li {
-    list-style: none;
-    display: none;
+  display: none;
+  list-style: none;
+  font-size: 20px;
+  font-family: Arial;
+  font-weight: bold;
+  color: #353535;
+  /* background-color: #ffffff; */
+  opacity: 0.9;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.4s ease-in-out;
 }
-
+.dropdown li {
+  list-style: none;
+  scale: 0;
+  transition: all 0.4s ease-in-out;
+}
+/*this is dropdown menu of category*/
 .dropdown {
-    display: none;
-    position: absolute;
-    margin-left: 20px;
-    font-size: 25px;
-
+  /* background-color: #ffffff; */
+  width: 300px;
+  /* display: none; */
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 28px;
+  margin-left: 20px;
+  font-size: 25px;
+  gap: 0px;
+  transition: all 0.4s ease-in-out;
 }
 .dropnav {
-    position: relative; 
+  position: relative;
 }
-
-.dropnav:hover>.dropdown li  {
-    display: block;
+/*hoover effect on  ctegory*/
+.dropnav:hover > .dropdown li {
+  display: flex;
+  scale: 1;
+  width: 200px;
+  flex-direction: column;
+  gap: 0px;
 }
-
-.pages ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 30px;
-    width: fit-content;
+.testNav {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
 }
-.pages a{
-    text-decoration: none;
-    font-size: medium;
-    color:#353535;
-    font-size: 1.3rem;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-
+.testNav li {
+  list-style: none;
+  width: fit-content;
+  border: 1px solid black;
+  margin: 0;
 }
+/*pages of nav bar*/
+.pages ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+  width: fit-content;
+}
+/*pages of nav bar*/
+.pages a {
+  text-decoration: none;
+  font-size: medium;
+  color: #353535;
+  font-size: 1.3rem;
+  font-family: Arial;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
+/* hover effect onpages of nav bar*/
 .pages a:hover {
-    color: #284b63;
-    text-decoration: none;
-    font-style: bold;
+  color: #284b63;
+  text-decoration: none;
+  font-style: bold;
 }
-.pages{
-    padding: 10px;
-    
+/*pages of nav bar*/
+.pages {
+  padding: 10px;
 }
-.navBar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    height: 70px;
-
-
-    
+/*whole navbar*/
+.navBar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  height: 70px;
 }
-.searchBox{
-    color: aliceblue;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    margin-top: 5px;
-    margin-right: 100px; 
-    margin-left: 80px;  
-    margin-bottom: 0px;
+/* searchbox*/
+.searchBox {
+  color: aliceblue;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+  margin-right: 100px;
+  margin-left: 80px;
+  margin-bottom: 0px;
 }
+/*searchbox placeholder*/
 .search::placeholder {
-    font-family: 'Arial';
-    text-align: center;
-    font-size: 17px;
-    color:#ca6702;
+  font-family: "Arial";
+  text-align: center;
+  font-size: 17px;
+  color: #ca6702;
 }
-.searchButton{
-    height: 35px;
-    width: 90px;
-    background-color:#ca6702;
-    border: 1px solid #3c6e71;
-    cursor: pointer;
-    transition: 0.4s ease-in-out;
-    font-size: 1.3rem;
+/*search button*/
+.searchButton {
+  height: 35px;
+  width: 90px;
+  background-color: #ca6702;
+  border: 1px solid #3c6e71;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+  font-size: 1.3rem;
 }
-.searchButton:hover{
-    color: rgb(245, 247, 248);
-    text-decoration: none;
-    font-style: bold;
+/*hover effect on search button*/
+.searchButton:hover {
+  color: rgb(245, 247, 248);
+  text-decoration: none;
+  font-style: bold;
 }
+/*whole search section*/
 .search {
-    font-family: 'Times New Roman';
-    font-size: 1.3rem;
-    background: transparent;
-    border: 1px solid #ca6702;
-    color: #353535;
-    width: 300px;
-    height: 35px;
+  font-family: "Times New Roman";
+  font-size: 1.3rem;
+  background: transparent;
+  border: 1px solid #ca6702;
+  color: #353535;
+  width: 300px;
+  height: 35px;
 }
-/* *{
-    border: 1px solid black;
-} */
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
+/*content section*/
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 89%;
-    flex-wrap: wrap;
-    gap: 50px;
-    margin-top: 0px;
-    margin-left: 10px;
-    margin-right: 10px;
-
+/*main section of page*/
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 89%;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-top: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.mainWrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+/*wrapper of main section*/
+.mainWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 /*Product Grid*/
-.topRow,.middleRow,.bottomRow{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 0px;
+.topRow,
+.middleRow,
+.bottomRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 0px;
 }
-.product{
-   
-    height: 450px;
-    width: 260px;
-    margin-left: 20px;
-   /* background-color: rgba(225,225,225,0.05);
+/*product card*/
+.product {
+  height: 450px;
+  width: 260px;
+  margin-left: 20px;
+  /* background-color: rgba(225,225,225,0.05);
     /*backdrop-filter: blur(30px);*/
-    /* transition: all 0.2s ease-in-out ; */
-    border-radius: 30px;
-    transition: all 0.2s ease-in-out;
-    background-color: #ffffff;
-    position: relative;
-    
-    
+  /* transition: all 0.2s ease-in-out ; */
+  border-radius: 30px;
+  transition: all 0.2s ease-in-out;
+  background-color: #ffffff;
+  position: relative;
 }
+/*hover effect on product card*/
+.product:hover {
+  box-shadow: 12px 12px 12px rgba(251, 251, 251, 0.1),
+    -10px -10px 10px rgb(151, 151, 151);
+  /* This code gives background light when we move our mouse over product */
+  transform: scale(1.05);
+}
+/*Image of the product*/
+.productImage {
+  height: 50%;
+  margin: 20px;
+  overflow: hidden;
 
-.product:hover{
-    box-shadow: 12px 12px 12px rgba(251, 251, 251, 0.1),-10px -10px 10px rgb(151, 151, 151);
-    /* This code gives background light when we move our mouse over product */
-    transform: scale(1.05);
+  position: relative;
+  margin-bottom: 0px;
+  /* border: 1px solid black; */
 }
-.productImage{
-    height: 50%;
-    margin: 20px;
-    overflow: hidden;
-    
-    position: relative;
-    margin-bottom: 0px;
-    /* border: 1px solid black; */
+/*hot label on the product*/
+.productImage::before {
+  content: "HOT";
+  position: absolute;
+  width: 50px;
+  height: 23px;
+  background-color: #ff2e04e5;
+  color: #ffffff;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 0;
+  border-radius: 5px 0px 0px 5px;
 }
-.productImage::before{
-    content: 'HOT';
-    position: absolute;
-    width: 50px;
-    height: 23px;
-    background-color: #ff2e04e5 ;
-    color: #ffffff;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    right: 0;
-    border-radius: 5px 0px 0px 5px;
-
+/*description of product*/
+.desc {
+  height: 13%;
+  width: 240px;
+  padding: 10px;
+  color: #353535;
 }
-.desc{
-    height: 13%;
-    width: 240px;
-    padding: 10px;
-    color: #353535;
+/*description of product*/
+.desc p {
+  font-weight: bold;
+  font-size: small;
+  display: flex;
+  flex-wrap: wrap;
 }
-.desc p{
-    font-weight: bold;
-    font-size: small;
-    display: flex;
-    flex-wrap: wrap;
+/*price of the product*/
+.price {
+  height: 5%;
+  margin-top: 25px;
+  /*color: rgb(240, 78, 9);*/
+  color: #005f73;
 }
-.price{
-    height: 5%;
-    margin-top: 25px;
-    /*color: rgb(240, 78, 9);*/
-    color: #005F73;
+/*price of the product*/
+.price h2 {
+  font-size: 1rem;
+  margin-left: 15px;
 }
-.price h2{
-    font-size: 1rem;
-    margin-left: 15px;
+/*Add to cart & but now buttons*/
+.productBtn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* padding-bottom: 20px; */
+  height: 10%;
+  margin-top: 20px;
+  margin-left: 20px;
+  gap: 20px;
 }
-.productBtn{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    /* padding-bottom: 20px; */
-    height: 10%;
-    margin-top: 20px;
-    margin-left: 20px;
-    gap: 20px;
-    
-    
+/*Add to cart & but now buttons*/
+.productBtn .btn1,
+.productBtn .btn2 {
+  height: 50px;
+  width: 100px;
 }
-.productBtn .btn1 ,.productBtn .btn2{
-    height: 50px;
-    width: 100px;
-
+/*Add to cart & but now buttons*/
+.btn1 button,
+.btn2 button {
+  padding: 8px;
+  /* border-radius: 20px; */
+  background-color: #accdc2;
 }
-.btn1 button,.btn2 button{ 
-    padding: 8px;
-    /* border-radius: 20px; */
-    background-color: #accdc2;
+/*Add to cart & but now buttons*/
+.btn1 h3,
+.btn2 h3 {
+  font-size: small;
 }
-.btn1 h3, .btn2 h3{
-    font-size: small;
+/*imag eof the product*/
+.productImage img {
+  height: 100%;
+  width: 90%;
+  transform: scale(0.7);
+  object-fit: contain;
+  align-items: center;
+  margin-bottom: 20px;
+  overflow: hidden;
 }
-.productImage img{
-    height:100%;
-    width: 90%;
-    
-    transform: scale(0.7);
-    align-items: center;
-    margin-bottom: 20px;
-    overflow: hidden;
-    
-
-    
-}
+/*footer*/
 .footer {
-    height: 180px;
-    background-color: #005F73;
-    color: #fff;
+  height: 180px;
+  background-color: #005f73;
+  color: #fff;
 }
-
+/*another container for product*/
 .containerr {
-
-    display: flex;
-    justify-content: space-between;
-    background-color: #005F73;
-
+  display: flex;
+  justify-content: space-between;
+  background-color: #005f73;
 }
-.box{
-    margin-top: 20px;
-    padding: 17px;
+/*box for diiferent links in footer*/
+.box {
+  margin-top: 20px;
+  padding: 17px;
 }
-
+/*box for diiferent links in footer*/
 .box p {
-    font-size: 1.3rem;
-    letter-spacing: 1px;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
 }
-
+/*box for diiferent links in footer*/
 .box h3 {
-    font-size: 1.7rem;
-    font-family: 'Times New Roman', Times, serif;
-
+  font-size: 1.7rem;
+  font-family: "Times New Roman", Times, serif;
 }
-
+/*box for diiferent links in footer*/
 .box i {
-    color: white;
-
+  color: white;
 }
-
+/*box for contact links in footer*/
 .box a {
-    display: block;
-    text-decoration: none;
-    padding-top: 23px;
-    color:#ffffff;
-    font-size: larger;
-
+  display: block;
+  text-decoration: none;
+  padding-top: 23px;
+  color: #ffffff;
+  font-size: larger;
 }
-
+/*when you hover on contact links in footer*/
 .box a:hover {
-    color: #ff7200;
+  color: #ff7200;
 }
-
+/*social media links in footer*/
 .socialmedia {
-    display: flex;
-    gap: 30px;
+  display: flex;
+  gap: 30px;
 }
-
+/*social media links in footer*/
 .socialmedia a {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
-
+/*social media links hover in footer*/
 .socialmedia a:hover {
-    animation: forwards;
+  animation: forwards;
 }
-
+/*newsletter*/
 .newsEmail {
-    border-radius: 20px;
-    margin-top: 20px;
-    height: 30px;
-    background-color: #eee;
-    border: none;
-    width: 220px;
+  border-radius: 20px;
+  margin-top: 20px;
+  height: 30px;
+  background-color: #eee;
+  border: none;
+  width: 220px;
 }
 
 .box img {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
-
+/*newsletter subscribe button*/
 .subscribe {
-    margin-top: 10px;
-    margin-left: 60px;
-    width: 100px;
-    height: 30px;
-    background-color: #ff7200;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.4s ease-in-out;
-    font-size: 1.2rem;
+  margin-top: 10px;
+  margin-left: 60px;
+  width: 100px;
+  height: 30px;
+  background-color: #ff7200;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+  font-size: 1.2rem;
 }
-
+/*subscribe button hover*/
 .subscribe:hover {
-    background-color: #eee;
-    text-decoration: underline;
-    color: lightblue;
-    font-style: arial;
+  background-color: #eee;
+  text-decoration: underline;
+  color: lightblue;
+  font-style: arial;
 }
-.copyright{
-    margin-top: 10px;
-    margin-right: 5px;
+/*copyright*/
+.copyright {
+  margin-top: 10px;
+  margin-right: 5px;
 }
-.pagination{
-    display: flex;
-    float: left;
-    /* margin-left: 1900px; */
-    text-align: center;
-    transition: all 0.2s ease-in-out;
+/*pagination || swapping pages*/
+.pagination {
+  display: flex;
+  float: left;
+  /* margin-left: 1900px; */
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+/*pagination || swapping pages*/
+.pagination a {
+  color: #353535;
+  margin-left: 10px;
+  text-decoration: none;
+  padding: 5px;
+  display: inline-block;
+  width: 25px;
+  font-size: larger;
+}
+/*page which you are on*/
+.pagination a.active {
+  background-color: #ff7200;
+  font-weight: bold;
+  border-radius: 5px;
+}
+/*pages which are not active when you hover*/
+.pagination a:hover:not(.active) {
+  background-color: #accdc2;
+  border-radius: 5px;
+}
+.addToCartPopup {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.445);
+  display: none;
+  opacity: 0;
+  position: fixed;
+  z-index: 9999999999999999999999998999999999;
+}
+.addToCartPopup .popupCard {
+  width: 340px;
+  height: 200px;
+  background-color: white;
+  margin: 0 auto;
+  margin-top: 200px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
+.popupMessage {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-style: oblique;
+  font-weight: 600;
 }
-.pagination a{
-    color: #353535;
-    margin-left: 10px;
-    text-decoration: none;
-    padding:5px;
-    display:inline-block;
-    width: 25px;
-    font-size: larger;
-    
+.popupActions {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
-.pagination a.active{
-    background-color: #ff7200;
-    font-weight: bold;
-    border-radius: 5px;
+.popupActions button {
+  width: 40%;
+  height: 35px;
+  background-color: orange;
+  border: none;
 }
-.pagination a:hover:not(.active){
-    background-color:#accdc2;
-    border-radius: 5px;
+.ADDEDCART {
+  transition: all 0.4s linear;
+  background: linear-gradient(90deg, #eb9b07ef, #bdf007);
+  /* animation: animate 0.8s linear infinite; */
 }
